# morph-robust-fr

./: LICENSE  LICENSE-THIRD-PARTY  README.md  pyproject.toml  requirements.txt
detection/: losses.py
detection/data/: dataset.py  dataset_triplet.py  index_parser.py  preprocessing.py
detection/data_prep/: generate_preprocess_figure.py  make_3way_split.py  make_split.py  merge_splits.py
detection/evaluation/: eval.py  plot_det.py  plot_det_deer.py  plot_roc_det.py  plot_score_histogram.py
detection/models/: mlp_adapter.py
detection/models/adaface/: loader.py  net.py
detection/models/arcface/: __init__.py  iresnet.py
detection/similarity_pairing/: build_knn.py  build_prototypes.py  extract_embeddings.py  index_dataset.py  make_split_ids.py  sample_pairs.py
detection/training/: train_adapter.py  train_adapter_triplet.py
docs/: CHANGES.md  PAIRING_METHODOLOGY.md  backbone_integration.md  multi_blend_sampling_pipeline.md  problem_statement_impostor_score_fix.md
morphing/: export_landmarks.py  morph_function_final.py  morphs_based_on_pairs.py
morphing/pairing/: add_cosine_similarity.py  generate_random_pairs.py  make_blend_pairlists.py  make_split.py
morphing/validation/: run_sanity_checks.py  verify_blend_generation.py
