[project]
name = "morph-robust-fr"
version = "0.1.0"
description = "Morph-robust face recognition: AdaFace IR-50 + MLP adapter trained with TetraLoss to detect face-morphing attacks, plus the morph-generation and similarity-pairing pipelines used to build the training data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detection*", "morphing*"]
